--- a/configure.ac
+++ b/configure.ac
@@ -3,13 +3,17 @@ AC_INIT([aj-snapshot], [0.9.5], [lievenmoors@gmail.com])
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/aj-snapshot.c])
 AC_PREFIX_DEFAULT(/usr/local)
+
+AC_PROG_AWK
 AC_PROG_CC
 AC_PROG_INSTALL
+AC_PROG_LN_S
 
 AC_CHECK_HEADER(getopt.h, [])
 AC_CHECK_HEADER(alsa/asoundlib.h, [])
 AC_CHECK_HEADER(jack/jack.h, [])
 AC_CHECK_HEADER(mxml.h, [])
+AC_CHECK_HEADERS([string.h])
 
 AC_CHECK_LIB(asound, main, [], [AC_MSG_ERROR(ALSA library (asound) is required)])
 AC_CHECK_LIB(jack, main, [], [AC_MSG_ERROR(JACK library (jack) is required)])
